# rayTracing

./: CMakeLists.txt  Integrator.cpp  Integrator.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RunningOptions.h  ambiente.h  api.h  background.hpp  blinnMaterial.h  blinnPhongIntegrator.cpp  blinnPhongIntegrator.h  camera.cpp  camera.h  color.h  dephMathIntegrator.cpp  dephMathIntegrator.h  directional.h  film.h  film.hpp  flatIntegrator.cpp  flatIntegrator.h  integrator.h  light.h  main.cpp  material.cpp  material.h  normalIntegrator.cpp  normalIntegrator.h  output-image.ppm  paramset.h  parser.cpp  parser.h  point.h  point2.h  primitive.cpp  primitive.h  ray.h  (+11 more)
rayTracing-sem-parser/: Alunos.txt  OrthographicCamera.cpp  PerspectiveCamera.h  camera.h  color.h  parser.cpp  parser.h  primitive.h  sphere.h  tinyxml2.h
